--- a/01.ipynb
+++ b/01.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "mismatch between cell counter (5) and saved ipython counter (3)\n",
+      "fixing up to actual counter of 3\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -30,34 +40,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('../data/dataset.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(35001, 32)\n",
-      "\n",
-      "Missing Values:\n",
-      " 23616\n"
+      "mismatch between cell counter (10) and saved ipython counter (6)\n",
+      "fixing up to actual counter of 6\n"
      ]
     }
    ],
    "source": [
-    "print(df.shape) # prints the dimensions of the DataFrame\n",
-    "\n",
-    "missing_values = np.where(df.isnull(), 1, 0).sum()\n",
-    "print(\"\\nMissing Values:\\n\", missing_values)"
+    "PATH = os.getcwd()\n",
+    "df = pd.read_csv(os.path.join(PATH, \"data/dataset.csv\"))"
    ]
   },
   {
@@ -285,16 +282,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "mismatch between cell counter (9) and saved ipython counter (8)\n",
+      "fixing up to actual counter of 8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(35001, 32)\n",
+      "\n",
+      "Missing Values:\n",
+      " 23616\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.shape) # prints the dimensions of the DataFrame\n",
+    "\n",
+    "missing_values = np.where(df.isnull(), 1, 0).sum()\n",
+    "print(\"\\nMissing Values:\\n\", missing_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "mismatch between cell counter (14) and saved ipython counter (12)\n",
+      "fixing up to actual counter of 12\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(14025, 32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2489,7 +2525,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2503,7 +2539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
