--- a/synthetic_merge.ipynb
+++ b/synthetic_merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "synthetic_df = synthetic_df.drop(\n",
     "    columns=[\n",
     "        \"name\",\n",
-    "        \"plays\",\n",
+    "        # \"plays\",\n",
     "        \"audio_popularity\",\n",
     "        \"artiste_popularity\",\n",
     "        \"track_genre\",\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,21 +128,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['user_id', 'age', 'education', 'gender', 'country', 'music',\n",
-       "       'artist_name', 'featured_artists', 'genre', 'acousticness',\n",
+       "       'artist_name', 'featured_artists', 'genre', 'plays', 'acousticness',\n",
        "       'danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness',\n",
        "       'instrumentalness', 'liveness', 'valence', 'tempo', 'time_signature',\n",
        "       'release_date', 'explicit', 'duration', 'music_id', 'id_artists'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        " 'explicit']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,16 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(35001, 26)"
+       "(35001, 27)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,16 +293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(35001, 12)"
+       "(35001, 13)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -329,10 +329,8 @@
       "      dtype='object')\n",
       "====================================================================================================\n",
       "Columns in synthetic_df: Index(['user_id', 'age', 'education', 'gender', 'country', 'music',\n",
-      "       'artist_name', 'featured_artists', 'genre', 'acousticness',\n",
-      "       'danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness',\n",
-      "       'instrumentalness', 'liveness', 'valence', 'tempo', 'time_signature',\n",
-      "       'release_date', 'explicit', 'duration', 'music_id', 'id_artists'],\n",
+      "       'artist_name', 'featured_artists', 'genre', 'plays', 'duration',\n",
+      "       'music_id', 'id_artists'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -347,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +365,7 @@
        "Name: music, Length: 35001, dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,14 +433,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Merged Shape: (19974, 26)\n"
+      "Merged Shape: (19974, 27)\n"
      ]
     }
    ],
@@ -463,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -509,6 +507,9 @@
        "      <th>liveness</th>\n",
        "      <th>valence</th>\n",
        "      <th>tempo</th>\n",
+       "      <th>time_signature</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>explicit</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -518,14 +519,17 @@
        "      <td>0.099392</td>\n",
        "      <td>0.464</td>\n",
        "      <td>0.634667</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>-11.632667</td>\n",
-       "      <td>0.666667</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.0483</td>\n",
        "      <td>0.771333</td>\n",
        "      <td>0.2330</td>\n",
        "      <td>0.370</td>\n",
        "      <td>125.956</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2005-12-01</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -533,14 +537,17 @@
        "      <td>0.908000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.035400</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>7</td>\n",
        "      <td>-20.151000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.4790</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2019-06-14</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -548,14 +555,17 @@
        "      <td>0.011700</td>\n",
        "      <td>0.381</td>\n",
        "      <td>0.894000</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>11</td>\n",
        "      <td>-6.007000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0530</td>\n",
        "      <td>0.877000</td>\n",
        "      <td>0.1160</td>\n",
        "      <td>0.558</td>\n",
        "      <td>101.124</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -563,14 +573,17 @@
        "      <td>0.049800</td>\n",
        "      <td>0.658</td>\n",
        "      <td>0.887500</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
        "      <td>-7.435500</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.0398</td>\n",
        "      <td>0.000016</td>\n",
        "      <td>0.0504</td>\n",
        "      <td>0.945</td>\n",
        "      <td>123.594</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1986-07-01</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -578,43 +591,46 @@
        "      <td>0.782000</td>\n",
        "      <td>0.615</td>\n",
        "      <td>0.740000</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>-8.895000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.0496</td>\n",
        "      <td>0.668000</td>\n",
        "      <td>0.2340</td>\n",
        "      <td>0.331</td>\n",
        "      <td>132.220</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2006-06-09</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        music  acousticness  danceability    energy   key  \\\n",
-       "0                           !      0.099392         0.464  0.634667   6.0   \n",
-       "1             !!! - Interlude      0.908000         0.000  0.035400   7.0   \n",
-       "2                    !!!Si!!!      0.011700         0.381  0.894000  11.0   \n",
-       "3              !!De Repente!!      0.049800         0.658  0.887500   5.0   \n",
-       "4  !(?Galactic!#$Adventure!@#      0.782000         0.615  0.740000   2.0   \n",
+       "                        music  acousticness  danceability    energy  key  \\\n",
+       "0                           !      0.099392         0.464  0.634667    0   \n",
+       "1             !!! - Interlude      0.908000         0.000  0.035400    7   \n",
+       "2                    !!!Si!!!      0.011700         0.381  0.894000   11   \n",
+       "3              !!De Repente!!      0.049800         0.658  0.887500    5   \n",
+       "4  !(?Galactic!#$Adventure!@#      0.782000         0.615  0.740000    2   \n",
        "\n",
-       "    loudness      mode  speechiness  instrumentalness  liveness  valence  \\\n",
-       "0 -11.632667  0.666667       0.0483          0.771333    0.2330    0.370   \n",
-       "1 -20.151000  0.000000       0.0000          0.000000    0.4790    0.000   \n",
-       "2  -6.007000  0.000000       0.0530          0.877000    0.1160    0.558   \n",
-       "3  -7.435500  1.000000       0.0398          0.000016    0.0504    0.945   \n",
-       "4  -8.895000  1.000000       0.0496          0.668000    0.2340    0.331   \n",
+       "    loudness  mode  speechiness  instrumentalness  liveness  valence    tempo  \\\n",
+       "0 -11.632667     1       0.0483          0.771333    0.2330    0.370  125.956   \n",
+       "1 -20.151000     0       0.0000          0.000000    0.4790    0.000    0.000   \n",
+       "2  -6.007000     0       0.0530          0.877000    0.1160    0.558  101.124   \n",
+       "3  -7.435500     1       0.0398          0.000016    0.0504    0.945  123.594   \n",
+       "4  -8.895000     1       0.0496          0.668000    0.2340    0.331  132.220   \n",
        "\n",
-       "     tempo  \n",
-       "0  125.956  \n",
-       "1    0.000  \n",
-       "2  101.124  \n",
-       "3  123.594  \n",
-       "4  132.220  "
+       "   time_signature release_date  explicit  \n",
+       "0             4.0   2005-12-01     False  \n",
+       "1             0.0   2019-06-14     False  \n",
+       "2             4.0         1999     False  \n",
+       "3             4.0   1986-07-01     False  \n",
+       "4             4.0   2006-06-09     False  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,16 +641,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Synthetic Shape: (35001, 12)\n",
+      "Synthetic Shape: (35001, 13)\n",
       "Audio Features Shape: (1204025, 16)\n",
-      "Merged Shape: (19974, 26)\n"
+      "Merged Shape: (19974, 27)\n"
      ]
     }
    ],
@@ -646,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
