--- a/torch.ipynb
+++ b/torch.ipynb
@@ -1287,7 +1287,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ReNeLLM",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
