--- a/rs_main_v2_refactored/test.ipynb
+++ b/rs_main_v2_refactored/test.ipynb
@@ -13,7 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder, StandardScaler, OrdinalEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler, OrdinalEncoder, RobustScaler\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.feature_selection import SelectKBest, f_regression\n",
     "from collections import Counter\n",
